# DeepRobustDroneRacing

./: LICENSE  README.md
other_pkgs/octomap/dynamicEDT3D/lib/: libdynamicedt3d.so.1.9  libdynamicedt3d.so.1.9.4
other_pkgs/octomap/octomap/lib/: liboctomap.so.1.9  liboctomap.so.1.9.4  liboctomath.so.1.9  liboctomath.so.1.9.4
other_pkgs/rotors_simulator/rotors_description/urdf/: component_snippets.xacro  hummingbird_base.xacro
sim2real_drone_racing/: README.md  python_dependencies.txt
sim2real_drone_racing/drone_racing/drone_racing/: CMakeLists.txt  package.xml
sim2real_drone_racing/drone_racing/drone_racing/launch/: simulation_no_quad_gui.launch
sim2real_drone_racing/drone_racing/drone_racing/parameters/: goals.yaml  main.yaml
sim2real_drone_racing/drone_racing/drone_racing/src/: data_saver.cpp  drone_racing.cpp  drone_racing_node.cpp  gate_replacer.cpp  global_trajectory.cpp  minimum_jerk_trajectory.cpp  trajectory_base.cpp  trajectory_manager.cpp
sim2real_drone_racing/drone_racing/rapid_trajectories/src/: RapidTrajectoryGenerator.cpp
sim2real_drone_racing/learning/deep_drone_racing_learner/: package.xml
sim2real_drone_racing/learning/deep_drone_racing_learning_node/: package.xml
sim2real_drone_racing/learning/deep_drone_racing_learning_node/launch/: net_controller_launch.launch
sim2real_drone_racing/test_racing/: package.xml
sim2real_drone_racing/test_racing/launch/: test_racing.launch
sim2real_drone_racing/test_racing/nodes/: test_racing.py
sim2real_drone_racing/test_racing/src/TestRacing/: TestRacing.py
(+38 files in other folders)
