<?xml version="1.0"?>
<package format="2">
  <name>test_racing</name>
  <version>0.0.1</version>
  <description>Test a learned navigation model on unseen data</description>

  <maintainer email="tianqi_wang@kaist.ac.kr">tony</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin_simple</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>
    
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  
  <build_depend>message_generation</build_depend>
  

  <export>

  </export>
</package>
